# fantasy_helper

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.py  bot.py  config.py  docker-compose.prod.yml  docker-compose.yml  docker_install.sh  env_temp  kek.txt  legues.db  legues_db.py  loader.py  manager_loader.py  players.db  players_db.py  pre_install.sh  pyproject.toml  requirements.txt  sourses.db  updates.py  users.py  users_db.py
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: a6b4d6b9f20e_add_year_column.py  f442e864ac06_add_ball_recoveries_stat.py  f64916e678a7_test_migration.py
data/: config.py
databases/: legues.db  legues_db.py  players_db.py  sourses_db.py  users.py  users_db.py
databases/parse/: fonbet.py  sports.py  xbet.py
db/: database.py
db/models/: coeff.py  legues_db.py  media_ids.py  player_stats.py  players_db.py  sources.py  user.py
db/parse/: fbref.py  sports.py  xbet.py
db/utils/: create_db.py  uploding_files.py
docker/: Dockerfile.api  Dockerfile.app  Dockerfile.bot  Dockerfile.cron  Dockerfile.ui
docker/keycloak/: realm-export.json
domain/: coeffs.py  leagues_info.py  manager.py  player_stats.py  players.py  sources.py  users.py
fantasy_helper/: bot.py  crontab  loader.py  manager_loader.py
fantasy_helper/api/: app.py  auth_dep.py  keycloak_client.py  utils.py
fantasy_helper/app/: app.py  utils.py
fantasy_helper/conf/: config.py  config.yaml
fantasy_helper/db/: database.py
fantasy_helper/domain/: players.py
fantasy_helper/parsers/: betcity.py  fbref.py  marathon.py  mole.py  sports.py  xbet.py
fantasy_helper/sql/: add_betcity_coeffs_support.sql  add_new_column.sql  add_new_players.sql  add_sports_columns.sql  add_tour_name_column.sql  update_coeff_column.sql
fantasy_helper/tests/: fixtures.py
fantasy_helper/ui/: app.py  index.html  package-lock.json  package.json  tailwind.config.js  utils.py  vite.config.js
fantasy_helper/utils/: common.py  dataclasses.py  prettify.py
handlers/: __init__.py
handlers/users/: __init__.py  admin.py  (+11 more)
requirements/: api.txt  base.txt  bot.txt  conf.txt  db.txt  ml.txt  parsers.txt  tests.txt  ui.txt
scripts/: migrate.py
src/: app.py
states/: checking.py  menu.py
utils/: __init__.py  notify_admins.py  updates.py
(+176 files in other folders)
