[project]
name = "fantasy-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "pandas==2.1.4",
    "polars==1.33.0",
]

[project.optional-dependencies]
api = [
    "alembic==1.16.4",
    "bs4==0.0.1",
    "fastapi==0.109.1",
    "hydra-core==1.3.1",
    "iso8601==1.1.0",
    "loguru==0.7.3",
    "lxml==4.9.3",
    "pandas==2.1.4",
    "playwright==1.53.0",
    "polars==1.33.0",
    "psycopg2-binary==2.9.5",
    "pyjwt==2.10.1",
    "python-dotenv==0.15.0",
    "requests==2.32.2",
    "requests-html==0.10.0",
    "selenium==4.5.0",
    "sqlalchemy==1.4.2",
    "sqlalchemy-utils==0.38.3",
    "types-requests==2.28.11.8",
    "uvicorn==0.25.0",
]
conf = [
    "hydra-core==1.3.1",
    "loguru==0.7.3",
    "pandas==2.1.4",
    "polars==1.33.0",
    "python-dotenv==0.15.0",
]
bot = [
    "aiogram==2.11.2",
    "emoji==1.2.0",
    "hydra-core==1.3.1",
    "loguru==0.7.3",
    "pandas==2.1.4",
    "polars==1.33.0",
    "python-dotenv==0.15.0",
]
db = [
    "alembic==1.16.4",
    "hydra-core==1.3.1",
    "iso8601==1.1.0",
    "loguru==0.7.3",
    "pandas==2.1.4",
    "polars==1.33.0",
    "psycopg2-binary==2.9.5",
    "python-dotenv==0.15.0",
    "sqlalchemy==1.4.2",
    "sqlalchemy-utils==0.38.3",
]
ml = [
    "alembic==1.16.4",
    "hydra-core==1.3.1",
    "iso8601==1.1.0",
    "loguru==0.7.3",
    "openai==1.58.1",
    "pandas==2.1.4",
    "polars==1.33.0",
    "psycopg2-binary==2.9.5",
    "python-dotenv==0.15.0",
    "sqlalchemy==1.4.2",
    "sqlalchemy-utils==0.38.3",
]
parsers = [
    "bs4==0.0.1",
    "hydra-core==1.3.1",
    "loguru==0.7.3",
    "lxml==4.9.3",
    "pandas==2.1.4",
    "playwright==1.53.0",
    "polars==1.33.0",
    "python-dotenv==0.15.0",
    "requests==2.32.2",
    "requests-html==0.10.0",
    "selenium==4.5.0",
    "types-requests==2.28.11.8",
]
tests = [
    "alembic==1.16.4",
    "hydra-core==1.3.1",
    "iso8601==1.1.0",
    "loguru==0.7.3",
    "pandas==2.1.4",
    "polars==1.33.0",
    "psycopg2-binary==2.9.5",
    "pytest==7.4.0",
    "python-dotenv==0.15.0",
    "sqlalchemy==1.4.2",
    "sqlalchemy-utils==0.38.3",
]
